Thu Oct  4 11:05:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: New fanIterator()
	method for non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (find): Fix for
	non-manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix for
	non-manifold meshes with HalfEdge adjacency relations.

Wed Oct  3 16:54:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (collapse): Throw
	IllegalArgumentException if edge is outer.  Caller must call this
	method on symmetric edge instead, but this is not done automatically
	because caller could be confused by collapse() return value.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (canCollapse):
	In order to be consistent with the change just above, returns false
	if edge is outer.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java (swap): Also
	throw IllegalArgumentException if edge cannot be swapped.

Tue Oct  2 10:53:17 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* build.xml build.properties: Modify ant scripts to move classes
	containing viewer3d calls from jcae-test.jar into jcae.jar.
	Rename skip.tests property into build.tests and change its meaning
	accordingly.
	* src/org/jcae/mesh/amibe/algos2d/Initial.java: Call
	Triangle.setOuter() method to also set 'writable' member.  This
	algorithm had been broken for a month.
	* src/org/jcae/mesh/oemm/MeshReader.java (buildMesh(TIntHashSet)):
	Add node list to MeshTraitsBuilder.
	* build.xml build.properties
	  src/org/jcae/mesh/amibe/ds/HalfEdgeTest.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdgeTest.java
	  src/org/jcae/mesh/amibe/ds/AbstractHalfEdgeTest.java