@@ -1,3 +1,8 @@
+Sat Oct  6 21:21:08 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (collapse): Fix edge
+	collapse for non-manifold meshes.
+
 Thu Oct  4 11:05:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java
